# openapi-to-markdown

./: .pre-commit-config.yaml  README.md  prepare_commit_msg.py  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
